// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render input field 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1[type="number"] {
  -moz-appearance: textfield;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1:invalid {
  border-color: #eb5757;
}

.c1::-webkit-input-placeholder {
  color: #9298af;
}

.c1::-moz-placeholder {
  color: #9298af;
}

.c1:-ms-input-placeholder {
  color: #9298af;
}

.c1::placeholder {
  color: #9298af;
}

.c1:focus {
  border-color: #7994d4;
}

.c1:focus::-webkit-input-placeholder {
  color: transparent;
}

.c1:focus::-moz-placeholder {
  color: transparent;
}

.c1:focus:-ms-input-placeholder {
  color: transparent;
}

.c1:focus::placeholder {
  color: transparent;
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <span
    class="c0"
  >
    <input
      class="c1"
      name="input"
    />
  </span>
</div>
`;

exports[`<InputCheckbox /> should render checkbox field 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c1 {
  position: relative;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.4rem;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 3);
  height: calc(1.6rem / 1.7);
  border: 1px solid #fff;
  border-width: 0 calc(1.6rem / 10) calc(1.6rem / 10) 0;
  -webkit-transform: translate(-50%,-60%) rotate(45deg);
  -ms-transform: translate(-50%,-60%) rotate(45deg);
  transform: translate(-50%,-60%) rotate(45deg);
  content: "";
}

.c1:checked {
  background-color: #f66663;
}

.c1:checked:before {
  display: block;
}

<div>
  <label
    class="c0"
    for="checkbox"
  >
    <input
      class="c1"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    option
  </label>
</div>
`;

exports[`<InputDate /> should render input date field 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 5.4rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #fff;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  border: 1px solid transparent;
  border-radius: 0.6rem;
  border-color: transparent;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  border-color: transparent;
  outline: none;
  border-radius: 0.6rem;
  width: 160px;
}

.c1::-webkit-input-placeholder {
  color: #9298af;
}

.c1::-moz-placeholder {
  color: #9298af;
}

.c1:-ms-input-placeholder {
  color: #9298af;
}

.c1::placeholder {
  color: #9298af;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: 40px;
  height: 100%;
}

.c4 {
  opacity: 0;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4::-webkit-calendar-picker-indicator {
  position: absolute;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      name="input_date"
      placeholder="jj/mm/aaaa"
      value=""
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 32 32"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M20.947 7.601h1.601c1.472 0 2.521 1.198 2.521 2.669v2.306l-.001 10.392c0 1.472-1.049 2.669-2.521 2.669H8.669A2.672 2.672 0 0 1 6 22.967l.001-12.697a2.672 2.672 0 0 1 2.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6 17.036c.883 0 1.454-.786 1.454-1.67v-10.33h-17L7 22.967c0 .884.785 1.67 1.668 1.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786 8.669 7 9.387 7 10.27v1.367zm9.677 6.277h-2.135a1.07 1.07 0 0 1-1.068-1.068v-2.135a1.07 1.07 0 0 1 1.068-1.068h2.135a1.07 1.07 0 0 1 1.068 1.068v2.135a1.07 1.07 0 0 1-1.068 1.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203 3.203h2.135a1.07 1.07 0 0 0 1.068-1.068v-2.135a1.07 1.07 0 0 0-1.068-1.068H19.88a1.07 1.07 0 0 0-1.068 1.068v2.135a1.07 1.07 0 0 0 1.068 1.068zm0-3.203h2.135l.001 2.135H19.88v-2.135zm-8.54 8.541H9.204a1.07 1.07 0 0 1-1.068-1.068v-2.135a1.07 1.07 0 0 1 1.068-1.068h2.135a1.07 1.07 0 0 1 1.068 1.068v2.135a1.07 1.07 0 0 1-1.068 1.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202 3.203h2.135a1.07 1.07 0 0 0 1.068-1.068v-2.135a1.07 1.07 0 0 0-1.068-1.068h-2.135a1.07 1.07 0 0 0-1.068 1.068v2.135a1.07 1.07 0 0 0 1.068 1.068zm0-3.203h2.135l.001 2.135h-2.136v-2.135zm7.473 3.203H19.88a1.07 1.07 0 0 1-1.068-1.068v-2.135a1.07 1.07 0 0 1 1.068-1.068h2.135a1.07 1.07 0 0 1 1.068 1.068v2.135a1.07 1.07 0 0 1-1.068 1.068zm0-3.203H19.88v2.135h2.136v-2.135z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <input
        aria-disabled="false"
        class="c4"
        max="2100-01-01"
        min="1900-01-01"
        tabindex="-1"
        type="date"
        value="--"
      />
    </div>
  </div>
</div>
`;

exports[`<InputRadio /> should render input radio field 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c1:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c1:checked:before {
  display: block;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      id="radio"
      name="radio"
      type="radio"
    />
    <label
      class="c2"
      for="radio"
    >
      option
    </label>
  </div>
</div>
`;

exports[`<Select /> should render select field 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c2 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c1 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c1 *::-ms-backdrop,
.c1 {
  padding-right: 1.6rem;
}

.c1:invalid {
  border-color: #eb5757;
}

.c1:disabled {
  background-color: #e4e8ef;
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <select
      class="c1"
    >
      <option>
        ...
      </option>
      <option>
        Option 1
      </option>
      <option>
        Option 2
      </option>
    </select>
    <div
      aria-hidden="true"
      class="c2"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__a)"
        >
          <path
            d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__a"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Textarea /> should render textarea 1`] = `
.c0 {
  width: 100%;
  min-height: 12rem;
  padding: 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  line-height: inherit;
  background: #fff;
  border: 1px solid transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0::-webkit-input-placeholder {
  color: #9298af;
}

.c0::-moz-placeholder {
  color: #9298af;
}

.c0:-ms-input-placeholder {
  color: #9298af;
}

.c0::placeholder {
  color: #9298af;
}

.c0::-webkit-outer-spin-button,
.c0::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:focus {
  border-color: #7994d4;
}

.c0:focus::-webkit-input-placeholder {
  color: transparent;
}

.c0:focus::-moz-placeholder {
  color: transparent;
}

.c0:focus:-ms-input-placeholder {
  color: transparent;
}

.c0:focus::placeholder {
  color: transparent;
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
  }
}

<div>
  <textarea
    class="c0"
    name="textarea"
  />
</div>
`;
